--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="skills-div-images">
                 <div class="skills-div-text">
                     <img src="./images/conversation.png" alt="Communicative" class="professionalskills">
-                    <p>Комуникативен</p>
+                    <p>Комуникативност</p>
                 </div>
                 <div class="skills-div-text">
                     <img src="./images/multitask.png" alt="Multitasking" class="professionalskills">
